[package]
name = "raft-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raft = { version = "0.6" }
protobuf = { version = "2.24", features = ['with-bytes'] }
ntex = { version = "0.5.27", features = ["tokio"] }
clap = { version = "4.0.9", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
futures = "0.3.24"
